# uade-iprog-pong

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  TEORIA.md  conanfile.py
src/: clean_up.cpp  clean_up.hpp  configs.cpp  configs.hpp  creation.cpp  creation.hpp  game_loop.cpp  game_loop.hpp  juego.cpp  juego.hpp  main.cpp  resultado_csv.cpp  resultado_csv.hpp  timer.hpp  timer.tpp
src/logic/: red_window.cpp  red_window.hpp
src/models/: colision.cpp  colision.hpp  estado_pong.cpp  estado_pong.hpp  fondo.cpp  fondo.hpp  input.cpp  input.hpp  paleta.cpp  paleta.hpp  pelota.cpp  pelota.hpp  puntaje_jugador.cpp  puntaje_jugador.hpp  texto.cpp  texto.hpp  vec.cpp  vec.hpp
src/renders/: pong_render.cpp  pong_render.hpp  red_window.cpp  red_window.hpp
